Second Commit- refactor