@@ -3,131 +3,93 @@ import java.time.*;
 import java.util.*;
 
 public class Solver {
-
     private static final ZoneId UTC = ZoneOffset.UTC;
 
-    static List<ResultEntry> computeResults(CallRecord[] calls) {
-        // Step 1: Convert call records into daily event streams
-        Map<Integer, Map<LocalDate, List<Event>>> dailyEvents = buildDailyEvents(calls);
+    static List<ResultEntry> computeResults(List<Records> calls) {
+        Map<Integer, Map<LocalDate, List<Event>>> byCustDay = buildEventLists(calls);
 
-        // Step 2: Reduce events into max concurrency results
-        return reduceToResults(dailyEvents);
-    }
-
-
-    private static Map<Integer, Map<LocalDate, List<Event>>> buildDailyEvents(CallRecord[] calls) {
-        Map<Integer, Map<LocalDate, List<Event>>> grouped = new HashMap<>();
-
-        for (CallRecord c : calls) {
-            // Calls can span multiple days → find first and last UTC date
-            LocalDate first = Instant.ofEpochMilli(c.startTimestamp()).atZone(UTC).toLocalDate();
-            LocalDate last  = Instant.ofEpochMilli(c.endTimestamp() - 1).atZone(UTC).toLocalDate();
-
-            // For each day that the call overlaps:
-            for (LocalDate d = first; !d.isAfter(last); d = d.plusDays(1)) {
-                long dayStart = d.atStartOfDay(UTC).toInstant().toEpochMilli();
-                long dayEnd   = d.plusDays(1).atStartOfDay(UTC).toInstant().toEpochMilli();
-
-                // Clip call to fit within [dayStart, dayEnd)
-                long segStart = Math.max(c.startTimestamp(), dayStart); // inclusive
-                long segEnd   = Math.min(c.endTimestamp(),   dayEnd);   // exclusive
-
-                if (segStart < segEnd) {
-                    // Add START and END events for this day segment
-                    addSegmentEvents(grouped, c.customerId(), d, segStart, segEnd, c.callId(), c.endTimestamp());
-                }
-            }
-        }
-        return grouped;
-    }
-
-    /**
-     * Reduce daily events into ResultEntry objects:
-     * Sort events, sweep line to track active calls,
-     * record the maximum concurrency and corresponding callIds.
-     */
-    private static List<ResultEntry> reduceToResults(Map<Integer, Map<LocalDate, List<Event>>> dailyEvents) {
         List<ResultEntry> out = new ArrayList<>();
+        for (var cEntry : byCustDay.entrySet()) {
+            int customerId = cEntry.getKey();
+            for (var dEntry : cEntry.getValue().entrySet()) {
+                LocalDate date = dEntry.getKey();
+                List<Event> events = dEntry.getValue();
 
-        for (var byCustomer : dailyEvents.entrySet()) {
-            int customerId = byCustomer.getKey();
-
-            for (var byDate : byCustomer.getValue().entrySet()) {
-                LocalDate date = byDate.getKey();
-                List<Event> events = byDate.getValue();
-
-                // Sort: END first if same timestamp (because end is exclusive)
-                events.sort(
-                        Comparator.comparingLong(Event::time)
-                                .thenComparing(e -> e.type, Comparator.comparingInt(t -> t == Type.END ? 0 : 1))
-                                .thenComparing(Event::callId)
-                );
-
-                // Compute the maximum concurrency for this (customer, date)
-                ResultEntry entry = computeDayMax(customerId, date, events);
-                if (entry != null) out.add(entry);
+                ResultEntry r = reduceDay(customerId, date, events);
+                if (r != null) out.add(r);
             }
         }
         return out;
     }
 
-    /* ===== Helpers ===== */
+    private static Map<Integer, Map<LocalDate, List<Event>>> buildEventLists(List<Records> calls) {
+        Map<Integer, Map<LocalDate, List<Event>>> map = new HashMap<>();
 
-    /**
-     * Add both START and END events for a call segment that fits within one day.
-     * END is added first (at segEnd) to enforce end-exclusive rule.
-     */
-    private static void addSegmentEvents(Map<Integer, Map<LocalDate, List<Event>>> grouped,
-                                         int customerId,
-                                         LocalDate date,
-                                         long segStart,
-                                         long segEnd,
-                                         String callId,
-                                         long originalEnd) {
-        List<Event> bucket = grouped
-                .computeIfAbsent(customerId, k -> new HashMap<>())
-                .computeIfAbsent(date,      k -> new ArrayList<>());
+        for (Records c : calls) {
+            // figure out which UTC days this call touches (use end-1ms so midnight falls on the previous day)
+            LocalDate first = Instant.ofEpochMilli(c.startTimestamp()).atZone(UTC).toLocalDate();
+            LocalDate last  = Instant.ofEpochMilli(c.endTimestamp() - 1).atZone(UTC).toLocalDate();
 
-        bucket.add(new Event(segEnd,   Type.END,   callId, originalEnd));   // END event
-        bucket.add(new Event(segStart, Type.START, callId, originalEnd));   // START event
+            for (LocalDate d = first; !d.isAfter(last); d = d.plusDays(1)) {
+                long dayStart = d.atStartOfDay(UTC).toInstant().toEpochMilli();
+                long dayEnd   = d.plusDays(1).atStartOfDay(UTC).toInstant().toEpochMilli();
+
+                // clip to [dayStart, dayEnd) half-open window
+                long s = Math.max(c.startTimestamp(), dayStart);
+                long e = Math.min(c.endTimestamp(),   dayEnd);
+
+                if (s < e) {
+                    List<Event> evs = map
+                            .computeIfAbsent(c.customerId(), k -> new HashMap<>())
+                            .computeIfAbsent(d,             k -> new ArrayList<>());
+
+                    // add START and END events for that day segment
+                    evs.add(new Event(s, true,  c.callId()));  // START
+                    evs.add(new Event(e, false, c.callId()));  // END (end-exclusive)
+                }
+            }
+        }
+        return map;
     }
 
-
-    /**
-     * Perform sweep line algorithm for one day's events.
-     * Tracks currently active calls, updates maximum concurrent set.
-     */
-    private static ResultEntry computeDayMax(int customerId, LocalDate date, List<Event> events) {
+    private static ResultEntry reduceDay(int customerId, LocalDate date, List<Event> events) {
         if (events.isEmpty()) return null;
 
-        Map<String, Long> active = new LinkedHashMap<>(); // callId -> originalEnd
+        // Sort by time; for same time: END before START; then by callId for determinism
+        events.sort(
+                Comparator.comparingLong(Event::time)
+                        .thenComparing(e -> e.start() ? 1 : 0)   // END(0) before START(1)
+                        .thenComparing(Event::callId)
+        );
+
+        Set<String> active = new LinkedHashSet<>(); // stable ordering for snapshots
         int max = 0;
         long bestTs = 0L;
-        List<String> bestIds = List.of();
+        List<String> bestIds = Collections.emptyList();
 
         int i = 0;
         while (i < events.size()) {
-            long t = events.get(i).time;
+            long t = events.get(i).time();
 
-            // 1) process all END events at this timestamp
+            // 1) remove all ENDs at this timestamp
             int j = i;
-            while (j < events.size() && events.get(j).time == t && events.get(j).type == Type.END) {
-                active.remove(events.get(j).callId);
+            while (j < events.size() && events.get(j).time() == t && !events.get(j).start()) {
+                active.remove(events.get(j).callId());
                 j++;
             }
 
-            // 2) process all START events at this timestamp
+            // 2) add all STARTs at this timestamp
             int k = j;
-            while (k < events.size() && events.get(k).time == t && events.get(k).type == Type.START) {
-                active.put(events.get(k).callId, events.get(k).originalEnd);
+            while (k < events.size() && events.get(k).time() == t && events.get(k).start()) {
+                active.add(events.get(k).callId());
                 k++;
             }
 
-            // After applying ENDs then STARTs, check concurrency
+            // 3) update max after processing both groups
             if (active.size() > max) {
                 max = active.size();
                 bestTs = t;
-                bestIds = new ArrayList<>(active.keySet()); // snapshot of active calls
+                bestIds = new ArrayList<>(active); // snapshot
             }
 
             i = k; // advance to next timestamp block
@@ -137,34 +99,11 @@ public class Solver {
 
         return new ResultEntry(
                 customerId,
-                date.toString(),   // format YYYY-MM-DD
+                date.toString(),  // YYYY-MM-DD
                 max,
                 bestTs,
                 bestIds
         );
     }
-
-    /* ===== Internal helper types ===== */
-
-    private enum Type { START, END }
-
-    /**
-     * Represents a start or end event for one call, clipped to a given day.
-     */
-    private static final class Event {
-        final long time;        // epoch millis
-        final Type type;        // START or END
-        final String callId;    // which call this event belongs to
-        final long originalEnd; // full original end timestamp
-
-        Event(long time, Type type, String callId, long originalEnd) {
-            this.time = time;
-            this.type = type;
-            this.callId = callId;
-            this.originalEnd = originalEnd;
-        }
-
-        long time()   { return time; }
-        String callId(){ return callId; }
-    }
+    private record Event(long time, boolean start, String callId) {}
 }
